--- a/app/src/main/res/layout/activity_authentication.xml
+++ b/app/src/main/res/layout/activity_authentication.xml
@@ -19,19 +19,21 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                android:ems="10"
-                android:hint="Password"
-                android:id="@+id/password"
+                android:id="@+id/username"
+                android:hint="Username"
                 android:layout_gravity="center_horizontal"
                 android:textColor="#ffffff"
+                android:textCursorDrawable="@null"
                 android:textColorHint="#c1c1c1" />
 
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/username"
-                android:hint="Username"
+                android:inputType="textPassword"
+                android:ems="10"
+                android:hint="Password"
+                android:textCursorDrawable="@null"
+                android:id="@+id/password"
                 android:layout_gravity="center_horizontal"
                 android:textColor="#ffffff"
                 android:textColorHint="#c1c1c1" />
