--- a/app/src/main/res/layout/activity_authentication.xml
+++ b/app/src/main/res/layout/activity_authentication.xml
@@ -21,6 +21,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/username"
                 android:hint="Username"
+                android:text="test"
                 android:layout_gravity="center_horizontal"
                 android:textColor="#ffffff"
                 android:textCursorDrawable="@null"
@@ -32,6 +33,7 @@
                 android:inputType="textPassword"
                 android:ems="10"
                 android:hint="Password"
+                android:text="test"
                 android:textCursorDrawable="@null"
                 android:id="@+id/password"
                 android:layout_gravity="center_horizontal"
