--- a/app/src/main/res/layout/chat.xml
+++ b/app/src/main/res/layout/chat.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/chat"
+    android:fillViewport="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
@@ -26,19 +27,31 @@
             android:background="#cccccc"
             android:weightSum="1">
 
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="32dp"
-                android:id="@+id/myMessage"
-                android:background="#ffffff"
-                android:layout_marginLeft="10dp"
-                android:layout_weight="0.73" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="send"
-                android:id="@+id/sendMessage" />
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="send"
+                    android:id="@+id/sendMessage"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true" />
+
+                <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="32dp"
+                    android:id="@+id/myMessage"
+                    android:background="#ffffff"
+                    android:layout_weight="0.73"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_toLeftOf="@+id/sendMessage"
+                    android:layout_toStartOf="@+id/sendMessage" />
+            </RelativeLayout>
         </LinearLayout>
 
     </LinearLayout>
