--- a/app/src/main/res/layout/chat.xml
+++ b/app/src/main/res/layout/chat.xml
@@ -37,8 +37,8 @@
                     android:text="send"
                     android:id="@+id/sendMessage"
                     android:layout_alignParentTop="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true" />
+                    android:layout_toLeftOf="@+id/takePicture"
+                    android:layout_toStartOf="@+id/takePicture" />
 
                 <EditText
                     android:layout_width="wrap_content"
@@ -51,6 +51,15 @@
                     android:layout_alignParentStart="true"
                     android:layout_toLeftOf="@+id/sendMessage"
                     android:layout_toStartOf="@+id/sendMessage" />
+
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/takePicture"
+                    android:background="@drawable/ic_action_camera"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true" />
             </RelativeLayout>
         </LinearLayout>
 
