--- a/app/src/main/res/layout/chat.xml
+++ b/app/src/main/res/layout/chat.xml
@@ -8,15 +8,27 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center_horizontal"
         android:weightSum="1">
 
         <ListView
             android:layout_width="match_parent"
-            android:layout_height="fill_parent"
+            android:layout_height="match_parent"
             android:id="@+id/listView"
-            android:layout_weight="0.87" />
+            android:layout_weight="0.87"
+            android:background="@drawable/blurred" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:src="@android:drawable/ic_dialog_email"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/myMessage"
+            android:visibility="gone"
+            android:layout_toEndOf="@+id/myMessage" />
 
         <LinearLayout
             android:orientation="horizontal"
@@ -33,25 +45,34 @@
 
                 <Button
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="send"
+                    android:layout_height="50dp"
                     android:id="@+id/sendMessage"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true" />
+                    android:layout_alignParentEnd="true"
+
+                    android:background="#656565"
+                    android:text="send"
+                    android:textColor="#ffffff" />
 
                 <EditText
                     android:layout_width="wrap_content"
-                    android:layout_height="32dp"
+                    android:layout_height="50dp"
                     android:id="@+id/myMessage"
-                    android:background="#ffffff"
+                    android:background="#3f3f3f"
                     android:layout_weight="0.73"
-                    android:layout_centerVertical="true"
+                    android:textColor="#ffffff"
+                    android:textColorHint="#ffffff"
+                    android:hint="Enter a message ..."
+                    android:paddingLeft="10dp"
+                    android:layout_alignParentTop="true"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_toLeftOf="@+id/sendMessage"
                     android:layout_toStartOf="@+id/sendMessage" />
+
             </RelativeLayout>
+
         </LinearLayout>
 
     </LinearLayout>
