--- a/app/src/main/res/layout/row_chat_left.xml
+++ b/app/src/main/res/layout/row_chat_left.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent" android:layout_height="wrap_content"
-    >
+    android:layout_width="fill_parent" android:layout_height="wrap_content">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="#57e2e2e2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:padding="10dp"
+        android:layout_margin="5dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -18,17 +22,35 @@
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_marginTop="10dp" />
+            android:textSize="15dp"
+            android:layout_marginTop="10dp"
+            android:textColor="#ffffff" />
 
-        <TextView
-            android:layout_width="259dp"
-            android:layout_height="wrap_content"
-            android:text="Ceci est un exemple de text un petit peu long mais pas trop trop quand même"
-            android:id="@+id/chat_item_friend_body"
-            android:layout_below="@+id/chat_item_myname"
-            android:layout_alignLeft="@+id/chat_item_myname"
-            android:layout_alignStart="@+id/chat_item_myname"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="20dp" />
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+
+            <FrameLayout
+                android:layout_width="3dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="15dp"
+                android:background="#519c51"></FrameLayout>
+
+            <TextView
+                android:layout_width="259dp"
+                android:layout_height="wrap_content"
+                android:text="Ceci est un exemple de text un petit peu long mais pas trop trop quand même"
+                android:id="@+id/chat_item_friend_body"
+                android:layout_below="@+id/chat_item_myname"
+                android:layout_alignLeft="@+id/chat_item_myname"
+                android:layout_alignStart="@+id/chat_item_myname"
+                android:layout_marginTop="5dp"
+                android:textSize="15dp"
+                android:layout_marginLeft="5dp"
+                android:textColor="#ffffff" />
+
+        </LinearLayout>
+
     </LinearLayout>
 </RelativeLayout>
