--- a/app/src/main/res/layout/contact_list.xml
+++ b/app/src/main/res/layout/contact_list.xml
@@ -8,6 +8,10 @@
     <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:contextClickable="true"
+        android:focusable="true"
+        android:nestedScrollingEnabled="false" />
 
 </RelativeLayout>
