--- a/app/src/main/res/layout/row_chat_left.xml
+++ b/app/src/main/res/layout/row_chat_left.xml
@@ -37,6 +37,12 @@
                 android:layout_marginLeft="15dp"
                 android:background="#519c51"></FrameLayout>
 
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/ImageLeft"
+                android:layout_gravity="left" />
+
             <TextView
                 android:layout_width="259dp"
                 android:layout_height="wrap_content"
