--- a/app/src/main/res/layout/activity_authentication.xml
+++ b/app/src/main/res/layout/activity_authentication.xml
@@ -41,18 +41,6 @@
                 android:textColorHint="#c1c1c1" />
 
             <Button
-                android:layout_width="121dp"
-                android:layout_height="wrap_content"
-                android:text="Log in"
-                android:id="@+id/LogIn"
-                android:textColor="#FFFFFF"
-                android:layout_gravity="center_horizontal"
-                android:background="#747deb"
-                android:focusableInTouchMode="false"
-                android:focusable="false"
-                android:enabled="true" />
-
-            <Button
                 android:layout_width="124dp"
                 android:layout_height="wrap_content"
                 android:text="Log out"
@@ -64,6 +52,36 @@
                 android:focusable="false"
                 android:enabled="true"
                 android:visibility="invisible" />
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="36dp"
+                android:weightSum="1">
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Log in"
+                    android:id="@+id/LogIn"
+                    android:textColor="#FFFFFF"
+                    android:background="#747deb"
+                    android:focusableInTouchMode="false"
+                    android:focusable="false"
+                    android:enabled="true"
+                    android:layout_weight="0.64" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Register"
+                    android:id="@+id/Register"
+                    android:textColor="#FFFFFF"
+                    android:background="#ebc374"
+                    android:focusableInTouchMode="false"
+                    android:focusable="false"
+                    android:enabled="true" />
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 
